--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</style>
 	
 	<body>
-	<h2>Sherlock Homes</h2>
-		<div id='bio'>Crime-solver. Noir detective extraordinaire.</div>
+	<h2>Samantha Birabaharan</h2>
+		<div id='bio'>something something something.</div>
 	 
 	 	<h3>Assignments</h3>
 		<ul id='assignments'>
@@ -22,6 +22,9 @@
 		<h3>An invisible seal</h3>
 
 		<h3>A video</h3>
+		<video width="300" height="240" controls="controls">
+			<source src="gizmo.mp4" type="video/mp4" />
+		</video>
 
 		<h3>Two boxes side by side</h3>
 
