Added new video and different colors

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	
 	<style type="text/css">
 	 .button {
-				background:#333;
+				background:#151515;
 				width:100px;
-				color:#fff;
+				color:#FFBF00;
 				height:20px;
 				-moz-border-radius: 20px;
 				-webkit-border-radius: 20px;
@@ -25,14 +25,14 @@
 	#box1 {
 	        height: 50px;
 			width: 50px;
-			border: 50px solid blue;
+			border: 50px solid maroon;
 			margin: 15px;
 	}
 	 
 	#box2 {
 	        height: 50px;
 			width: 50px;
-			border: 50px solid green;
+			border: 50px solid black;
 			margin: 15px;
 	} 
 	 
@@ -40,11 +40,11 @@
 	
 	<body>
 	<h2>Samantha Birabaharan</h2>
-		<div id='bio'> struggling computer science major.SOS.</div>
+		<div id='bio'> Struggling senior. S.O.S</div>
 	 
 	 	<h3>Assignments</h3>
 		<ul id='assignments'>
-			<li>Go undercover</li>
+			<li>Be a real student</li>
 			<li>Learn HTML</li>
 		</ul>
 	
@@ -57,7 +57,7 @@
 
 		<h3>A video</h3>
 		<video width="300" height="240" controls="controls">
-			<source src="gizmo.mp4" type="video/mp4" />
+			<source src="Indila_-_S.O.S.mp4" type="video/mp4" />
 		</video>
 
 		<h3>Two boxes side by side</h3>
