--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 	</head>
 	
 	<style type="text/css">
+	body {
+		background:#CEF6F5;
+		font-family: Helvetica, Arial, sans-serif;
+		}
+		h2 {
+		font-size:22px;
+		font-weight:300;
+		color:#0B0B61;
+}
 	 .button {
 				background:#151515;
 				width:100px;
-				color:#FFBF00;
+				color:#01A9DB;
 				height:20px;
 				-moz-border-radius: 20px;
 				-webkit-border-radius: 20px;
@@ -25,9 +34,10 @@
 	#box1 {
 	        height: 50px;
 			width: 50px;
-			border: 50px solid maroon;
+			border: 50px solid turquoise;
 			margin: 15px;
 	}
+	 
 	 
 	#box2 {
 	        height: 50px;
